# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [6.0.0] - 2025-10-22

### Changed

- Atualizado versão do interpretador da Menhera.
- Atualizado a versão de bibliotecas da Menhera. Com isso, agora é possível a nova versão 2 dos componentes. Pode existir problemas em comandos existentes com essas modificações. Reportem tudo que encontrarem! 
- Diminuido mínimo para apostas no poker de `10000` para `1000` estrelinhas.

### Fixed

- Corrigido erro de tradução no comando poker.

## [5.21.5] - 2025-08-08

### Fixed

- Corrigido cálculo de espaço do silo para receber fertilizantes. - Reportado por @start_0

## [5.21.4] - 2025-07-31

### Changed

- O texto das plantações agora mostra exatamente quando a plantação vai estar madura/apodrecida.

## [5.21.3] - 2025-07-03

### Fixed

- Corrigido problema do silo ultrapassar sua capacidade máxima com Fertilizantes ao votar na Menhera. - Reportado por @mareys

## [5.21.2] - 2025-05-24

### Added

- Agora é possível ver as missões diárias de outro usuário.

### Changed

- A missão `Vença apostas no bicho` foi atualizada para `Aposte no bicho`. - Sugerido por @jokzy.y
- O prêmio para uma sugestão aprovada foi aumentada de `5000` para `30000` estrelinhas. 
- Aumentado o limite de apostas do Blackjack de `50000`para `100000` estrelinhas. - Sugerido por @jokzy.y
- Diminuído o preço da cor customizada de `50_000` para `35_000`. - Sugerido por @mareys

## [5.21.1] - 2025-04-04

### Added

- Adicionado o tempo para as missões diárias resetarem - Sugerido por @null00111111.
- Adicionado botão para usar um item em todos os campos da fazendinha ao mesmo tempo - Sugerido por @mareys.

## [5.21.0] - 2025-03-05

### Added
