@@ -5,6 +5,12 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).
 
+## [Unreleased]
+
+### Removed
+
+- Removido os comandos filosofia e astolfo, para evitar que usuários mal intencionados consigam banir a Menhera com textos "falados pela Menhera".
+
 ## [6.0.0] - 2025-10-22
 
 ### Changed
